# octopus-appchain-registry

./: .gitignore  Cargo.toml  README.md  build.sh  change_notes.md
.github/: CODEOWNERS
.github/workflows/: deploy-testnet.yml
appchain-registry/: Cargo.toml
appchain-registry/src/: appchain_anchor_callback.rs  appchain_basedata.rs  appchain_lifecycle.rs  appchain_manager.rs  appchain_owner_action.rs  appchain_owner_actions.rs  interfaces.rs  lib.rs  preclude.rs  registry_owner_action.rs  registry_owner_actions.rs  registry_roles.rs  registry_settings.rs  registry_settings_actions.rs  registry_status.rs  registry_viewer.rs  storage_key.rs  storage_migration.rs  sudo_actions.rs  types.rs  upgradable.rs  upgrade.rs  voter_action.rs  voter_actions.rs
appchain-registry/src/user_actions/: appchain_lifecycle.rs  appchain_owner_actions.rs  mod.rs  registry_roles.rs  registry_settings.rs  sudo_actions.rs  voter_actions.rs
appchain-registry/tests/: default.rs  test_case1.rs  test_case2.rs  test_case3.rs  test_case9.rs  test_registry_actions.rs
appchain-registry/tests/appchain_lifecycle_manager/: mod.rs
appchain-registry/tests/appchain_owner_action/: mod.rs
appchain-registry/tests/common/: mod.rs
appchain-registry/tests/oct_token_viewer/: mod.rs
appchain-registry/tests/registry_owner_action/: mod.rs
appchain-registry/tests/registry_viewer/: mod.rs
appchain-registry/tests/sudo_actions/: mod.rs
appchain-registry/tests/voter_action/: mod.rs
contract-builder/: Dockerfile  README.md  run.sh
mock-appchain-anchor/: Cargo.toml
mock-appchain-anchor/src/: lib.rs
mock-oct-token/: Cargo.toml
mock-oct-token/src/: lib.rs
scripts/ci/: deploy_testnet.sh
scripts/cli-samples/: change_metadata.sh  deploy_to_dev.sh  deploy_to_mainnet.sh  deploy_to_testnet.sh  store_wasm.sh  update_self_mainnet.sh
src/: appchain_basedata.rs  appchain_owner_action.rs  lib.rs  registry_owner_action.rs  registry_status.rs  storage_key.rs  types.rs  voter_action.rs
tests/: main.rs
tests/simulator/: appchain_owner_actions.rs  common.rs  main.rs  oct_token_viewer.rs  registry_roles.rs  test_case1.rs  test_case2.rs  test_case3.rs  test_case4.rs  test_case9.rs
tests/simulator/common/: basic_actions.rs  mod.rs
tests/simulator/contract_interfaces/: appchain_lifecycle_manager.rs  appchain_owner_actions.rs  mod.rs  registry_roles.rs  registry_settings.rs  registry_viewer.rs  sudo_actions.rs  voter_actions.rs
