
[package]
name = "octopus-appchain-registry"
version = "0.1.0"
authors = ["Octopus Network"]
edition = "2018"


[dev-dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
near-sdk-sim = "3.1.0"
hex = "0.4.2"

# remember to include a line for each contract
appchain-registry = { path = "./appchain-registry" }


[workspace]
members = ["appchain-registry"]