[package]
name = "appchain-registry"
version = "1.0.5"
authors = ["Octopus Network"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
hex = "0.4.2"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.0"
hex = "0.4.2"
num-format = "0.4.0"
# remember to include related mock contracts
mock-oct-token = { path = "../mock-oct-token" }
mock-appchain-anchor = { path = "../mock-appchain-anchor" }
