[package]
name = "appchain-registry"
version = "2.0.0"
authors = ["Octopus Network"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
hex = "0.4.2"

[dev-dependencies]
near-sdk = "4.0.0-pre.7"
near-sdk-sim = "4.0.0-pre.7"
hex = "0.4.2"
num-format = "0.4.0"
# remember to include related mock contracts
mock-oct-token = { path = "../mock-oct-token" }
mock-appchain-anchor = { path = "../mock-appchain-anchor" }
